sync: 11,441,647 ev/s (198x baseline) — update README, ideas.md, experiment log
README: 11.3M→11.4M, 195x→198x, 167 total experiments.
ideas.md: all high/med/low ideas exhausted with results.
jsonl: 26 new experiment entries (all discards this session).